move header files to src/include

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,5 @@ cmake_minimum_required(VERSION 3.27)
 project(optparse)
 set(CMAKE_C_FLAGS "-Wall -Wextra -pedantic")
 set(CMAKE_C_FLAGS_DEBUG "-g3 -Og -fsanitize=address,leak,undefined")
-add_library(optparse optparse.h optparse.c)
+add_library(optparse include/optparse.h optparse.c)
+target_include_directories(optparse PUBLIC include)
