--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,8 @@ cmake_minimum_required(VERSION 3.27)
 project(optparse)
 set(CMAKE_C_FLAGS "-Wall -Wextra -pedantic")
 set(CMAKE_C_FLAGS_DEBUG "-g3 -Og -fsanitize=address,leak,undefined")
-add_library(optparse include/optparse.h optparse.c)
+foreach(file include/optparse.h optparse.c)
+        list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/${file}")
+endforeach()
+add_library(optparse ${SOURCES})
 target_include_directories(optparse PUBLIC include)
