--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,5 +5,6 @@ set(CMAKE_C_FLAGS_DEBUG "-g3 -Og -fsanitize=address,leak,undefined")
 foreach(file include/optparse.h optparse.c)
         list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/${file}")
 endforeach()
+message(${SOURCES})
 add_library(optparse ${SOURCES})
-target_include_directories(optparse PUBLIC include)
+target_include_directories(optparse PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
