--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,5 +6,11 @@ foreach(file include/optparse.h optparse.c)
         list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/${file}")
 endforeach()
 message(${SOURCES})
+option(BUILD_EXAMPLES "Whether or not to build examples")
 add_library(optparse ${SOURCES})
 target_include_directories(optparse PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
+if (BUILD_EXAMPLES)
+        add_executable(optparse-demo "${CMAKE_CURRENT_SOURCE_DIR}/../examples/demo.c")
+        target_include_directories(optparse-demo PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include")
+        target_link_libraries(optparse-demo optparse)
+endif()
